<resources>
    <string name="app_name">First App for 6AB</string>
    <string name="WelcomeText">This is My First App</string>
    <string name="btnSave">Save</string>
    <string name="btn1">Button 1</string>
    <string name="btn2">Button 2</string>
    <string name="Q1">Islamabad is Capital of Pakistan</string>
    <string name="btnTrue">True</string>
    <string name="btnFalse">False</string>
    <string name="btnNext">Next</string>
    <string name="textHint">You will loose half of the score if you reveal the Hint</string>
    <string name="btnReveal">Reveal the Hint!</string>
    <string name="btnHint">Get a Hint!</string>
</resources>
